--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "",
   "version": "1.0.0",
-  "description": "",
+  "description": "Restaurant App",
   "main": "index.html",
-  "author": "",
+  "author": "Piet & Laszlo",
   "scripts": {
     "start": "run-p watch watch:styles",
     "build": "run-s clean clean:styles build:styles copy",
@@ -18,9 +18,6 @@
   },
   "keywords": [],
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.0.2"
-  },
   "devDependencies": {
     "gh-pages": "3.0.0",
     "live-server": "latest",
